--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 21
     buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "orbslam.iceberg.club.orbslam2"
@@ -12,8 +12,11 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags "-frtti -fexceptions"
+                cppFlags "-std=c++11","-frtti", "-fexceptions"
             }
+        }
+        ndk{
+            abiFilters 'armeabi-v7a'
         }
     }
     buildTypes {
